<resources>
    <string name="app_name">FACEBOOK</string>

    <string name="number">Numero de mobile ou e-mail</string>
    <string name="pwd">Mot de passe</string>
    <string name="con">Connexion</string>
    <string name="forget_pwd">Mot de passe oublier?</string>
    <string name="create">Créer un Compte</string>
    <string name="quite">Quitter</string>
    <string name="aide">Aide</string>
    <string name="title">Error</string>
    <string name="msg">Verifier votre email</string>
    <string name="deconncter">Deconnecter</string>
    <string name="home">Page daccieul</string>

</resources>